--- a/detallesproducto.css
+++ b/detallesproducto.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   background-color: #1f2937; 
   color: #fff;
-  
 }
 
 header {
@@ -26,17 +25,12 @@ header {
   align-items: center;
 }
 
-.logo h1 {
-  margin-right: 10px;
-  font-size: 24px;
-}
-
 .logo img {
   height: 60px;
 }
 
 .search-bar input {
-  background-color: #fff; 
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
   border: none;
   padding: 10px;
   border-radius: 5px;
@@ -55,101 +49,12 @@ header {
   cursor: pointer;
 }
 
-.user-icon {
-  width: 40px;
-  height: 40px;
-  background-image: url("user-icon.png"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-.user-icon-button {
-  display: inline-block;
-  padding: 1px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.cart-icon {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  background-image: url("cart-icon.png"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.cart-icon-button {
-  display: inline-block;
-  padding: 1px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.cart-icon::after {
-  content: "0";
-  position: absolute;
-  top: -5px;
-  right: -5px;
-  background-color: #f00;
-  color: #fff;
-  border-radius: 50%;
-  padding: 2px 5px;
-  font-size: 12px;
-}
-
-.heart-icon {
-  width: 40px;
-  height: 40px;
-  background-image: url("heart-icon.png"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-.heart-icon-button {
-  display: inline-block;
-  padding: 1px;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.category-dropdown {
-  background-color: #f59e0b;
-  padding: 10px 20px;
-  text-align: center;
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  display: none;
-  z-index: 10;
-  color: #ccc;
-}
-
-header:hover .category-dropdown {
-  display: block;
-}
-
-main {
-  padding: 20px 0;
-}
-
 .product-detail {
   display: flex;
   gap: 20px;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start; /* Ajuste para alinear la parte superior */
 }
-
 
 .product-image {
   width: 300px;
@@ -162,6 +67,7 @@ main {
   object-fit: cover;
   border-radius: 10px;
 }
+
 .product-info {
   flex-grow: 1;
 }
@@ -216,24 +122,6 @@ main {
   border-radius: 5px;
 }
 
-.payment-method {
-  display: flex;
-  align-items: center;
-}
-
-.payment-method-icon {
-  margin-left: 10px;
-  width: 40px;
-}
-
-.back-to-home {
-  display: block;
-  text-align:start;
-  text-decoration: none;
-  color: #f59e0b; 
-  margin-top: 20px;
-}
-
 footer {
   background-color: #ffffff65; 
   padding: 10px 0;
@@ -246,21 +134,9 @@ footer p {
 }
 
 .continue-shopping {
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
   text-decoration: none; 
 }
 
 .continue-shopping:hover {
   background-color: #0056b3; 
-}
-
-.continue-shopping:active {
-  background-color: #003087; /
 }
