--- a/index.css
+++ b/index.css
@@ -5,13 +5,14 @@ body {
   margin: 0;
   padding: 0;
   
-}
+} 
 
 header {
-  background-color: #f59e0b;
+  background: linear-gradient(to right, #f59e0b, #3b82f6); 
   padding: 20px 0;
   position: relative;
 }
+
 
 .container {
   max-width: 1200px;
@@ -315,4 +316,35 @@ footer {
 
 footer p {
   color: #000000; 
+}
+
+
+.product-card:hover {
+  transform: translateY(-10px);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 20px rgba(0, 123, 255, 0.3);
+  background-image: linear-gradient(135deg, #1e3a8a, #3b82f6);
+}
+
+
+.search-bar input {
+  background-color: #fff6f645;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+
+.button-ver:hover {
+  transform: scale(1.05);
+  background-color: #5b6580;
+  transition: all 0.3s ease;
+}
+
+
+.heart-icon-button.clicked,
+.cart-icon-button.clicked {
+  filter: brightness(1.5);
 }
