--- a/detallesproducto.css
+++ b/detallesproducto.css
@@ -30,7 +30,7 @@ header {
 }
 
 .search-bar input {
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
+  background-color: rgba(255, 255, 255, 0.8); 
   border: none;
   padding: 10px;
   border-radius: 5px;
@@ -53,8 +53,7 @@ header {
   display: flex;
   gap: 20px;
   justify-content: center;
-  align-items: flex-start; /* Ajuste para alinear la parte superior */
-}
+  align-items: flex-start; 
 
 .product-image {
   width: 300px;
